# getting-more-out-of-copilot

./: .gitignore  README.md
code/: AGENTS.md  README.md  Taskfile.yml  pyproject.toml
code/docs/superpowers/plans/: 2026-05-16-agentic-kubernetes-diagnostics-v1-implementation.md
code/docs/superpowers/specs/: 2026-05-16-agentic-kubernetes-diagnostics-design.md
code/src/deepturn_agents/: cli.py
code/src/deepturn_agents/adapters/: fake_k8s_adapter.py  k8s_adapter.py
code/src/deepturn_agents/agents/: microsoft_runtime.py  specialists.py  synthesis.py
code/src/deepturn_agents/audit/: audit_log.py
code/src/deepturn_agents/detection/: detector_engine.py
code/src/deepturn_agents/models/: evidence.py  findings.py  triggers.py
code/src/deepturn_agents/orchestration/: orchestrator.py
code/src/deepturn_agents/policy/: tool_policy.py
code/src/deepturn_agents/reporting/: composer.py
code/src/deepturn_agents/sanitization/: redactor.py
code/src/deepturn_agents/tools/: tool_gateway.py
code/tests/e2e/: test_cli_investigate.py
code/tests/fixtures/scenarios/: crashloop.json  imagepullbackoff.json  oom_probe_fail.json  unschedulable.json
code/tests/integration/: test_scenarios.py
code/tests/unit/: test_detector_engine.py  test_orchestrator.py  test_redactor.py  test_synthesis.py  test_tool_gateway.py  test_tool_policy.py
presentation/: index.html
presentation/assets/: index-C6F9d-1J.js  index-D-mtQo0O.css
session-transcript/: flight-recording.md
