[project]
name = "deepturn-agents"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.16.0",
  "pydantic>=2.10.0",
  "kubernetes>=30.1.0",
  "agent-framework>=1.0.0b251001",
  "azure-identity==1.20.*",
  "structlog>=24.4.0"
]

[dependency-groups]
dev = ["pytest>=8.3.0", "ruff>=0.6.0", "mypy>=1.11.0"]

[project.scripts]
diagctl = "deepturn_agents.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
